Add Render deployment configuration - backend setup with MySQL database